--- a/produtos.css
+++ b/produtos.css
@@ -28,6 +28,11 @@ nav a {
 	text-decoration: none;
 }
 
+nav a:hover {
+	color: #C78C19;
+	text-decoration: underline;;
+}
+
 .produtos {
 	width: 940px;
 	margin: 0 auto;
@@ -46,6 +51,19 @@ nav a {
 	border-radius: 10px;
 }
 
+.produtos li:hover {
+	border-color: #C78C19;
+
+}
+
+.produtos li:active {
+	border-color: #088C19;
+}
+
+.produtos li:hover h2 {
+	font-size: 33px;
+}
+
 .produtos h2 {
 	font-size: 30px;
 	font-weight: bold;
@@ -59,4 +77,16 @@ nav a {
 	font-size: 22px;
 	font-weight: bold;
 	margin: 10px 0 0;
+}
+
+footer {
+	text-align: center;
+	background: url("imagens/bg.jpg");
+	padding: 40px 0; 
+}
+
+.copyright {
+	color: #FFFFFF;
+	font-size: 13px;
+	
 }
